# databases

./: docker-compose.yaml  pyproject.toml
src/: add_data_to_db.py  pre_processing.py
src/benchmark_tests/: 01_mongo_add_data.py  01_postgre_add_data.py  02_mongo_query_users.py  02_postgre_query_users.py  02_query_users.py  03_sort_table.py  04_add_new_entry.py  05_edit_entry.py  06_delete_entry.py  07_add_bulk_entries.py  07_mongo_bulk_entries.py  07_postgree_bulk_entries.py  add_bulk_entries.py  add_new_entry.py  delete_entry.py  edit_entry.py  example_mongo.py  pre_processing.py  query_users.py  sort_table.py
src/data/: sandbox-396.json  sandbox-397.json  sandbox-400.json  sandbox.parquet
src/data/benchmark_tests/: example_postgre.py
src/data/sandbox/: sandbox-399-useractions.json
src/data_processing/: pre_processing.py  testing_mongo.py  testing_postgre.py  testing_postgre_2.py  testing_postgre_3.py
