[tool.poetry]
name = "databases"
version = "0.1.0"
description = ""
authors = ["joao.camacho <joao.camacho@visionspace.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11.8"
pydantic = "^2.5.2"
matplotlib = "^3.8.2"
pyarrow = "16.1.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
pymongo = "^4.7.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
ipython = "^8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
